--- a/samod/Cargo.toml
+++ b/samod/Cargo.toml
@@ -48,6 +48,7 @@ tokio = { version = "1.46.0", features = [
     "fs",
 ] }
 tokio-stream = { version = "0.1.17", features = ["io-util"] }
+tokio-util = { version = "0.7.15", features = ["codec", "net"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [[test]]
