--- a/samod/Cargo.toml
+++ b/samod/Cargo.toml
@@ -47,6 +47,7 @@ tokio = { version = "1.46.0", features = [
     "process",
     "fs",
 ] }
+tokio-test = { version = "0.4.4" }
 tokio-stream = { version = "0.1.17", features = ["io-util"] }
 tokio-util = { version = "0.7.15", features = ["codec", "net"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
