--- a/samod/Cargo.toml
+++ b/samod/Cargo.toml
@@ -32,6 +32,7 @@ tracing = "0.1.41"
 tungstenite = { version = "0.27.0", optional = true }
 gio = { version = "0.20.12", optional = true }
 glib = { version = "0.20.12", optional = true }
+async-channel = "2.5.0"
 
 [dev-dependencies]
 eyre = "0.6.12"
