--- a/samod/Cargo.toml
+++ b/samod/Cargo.toml
@@ -12,6 +12,7 @@ tokio = ["dep:tokio", "dep:tokio-util"]
 axum = ["dep:axum", "dep:tokio", "dep:tokio-util"]
 tungstenite = ["dep:tungstenite", "dep:tokio-tungstenite", "tokio"]
 gio = ["dep:gio", "dep:glib"]
+wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys", "samod-core/wasm"]
 
 [dependencies]
 automerge = "0.6.1"
@@ -34,6 +35,27 @@ gio = { version = "0.20.12", optional = true }
 glib = { version = "0.20.12", optional = true }
 async-channel = "2.5.0"
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = { version = "0.2", optional = true }
+wasm-bindgen-futures = { version = "0.4", optional = true }
+js-sys = { version = "0.3", optional = true }
+web-sys = { version = "0.3", features = [
+    "console",
+    "Window",
+    "WorkerGlobalScope",
+    "WebSocket",
+    "MessageEvent",
+    "CloseEvent",
+    "ErrorEvent",
+    "BinaryType",
+    "Blob",
+    "FileReader",
+    "File",
+    "FileSystemDirectoryHandle",
+    "FileSystemFileHandle",
+    "FileSystemWritableFileStream",
+], optional = true }
+
 [dev-dependencies]
 eyre = "0.6.12"
 reqwest = { version = "0.12.22", features = [
@@ -41,6 +63,9 @@ reqwest = { version = "0.12.22", features = [
     "blocking",
 ], default-features = false }
 tempfile = "3.20.0"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+
+[target.'cfg(not(taget_arch = "wasm32"))'.dev-dependencies]
 tokio = { version = "1.46.0", features = [
     "rt",
     "time",
@@ -51,7 +76,9 @@ tokio = { version = "1.46.0", features = [
 tokio-test = { version = "0.4.4" }
 tokio-stream = { version = "0.1.17", features = ["io-util"] }
 tokio-util = { version = "0.7.15", features = ["codec", "net"] }
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [[test]]
 name = "js_interop"
