--- a/samod/Cargo.toml
+++ b/samod/Cargo.toml
@@ -26,8 +26,8 @@ samod-core = { path = "../samod-core", version = "0.3.1" }
 tokio = { version = "1.46.0", features = ["rt", "time"], optional = true }
 tracing = "0.1.41"
 tungstenite = { version = "0.27.0", optional = true }
-gio = { version = "0.20.12", optional = true }
-glib = { version = "0.20.12", optional = true }
+gio = { version = "0.21.1", optional = true }
+glib = { version = "0.21.1", optional = true }
 async-channel = "2.5.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -58,6 +58,7 @@ web-sys = { version = "0.3", features = [
     "FileSystemFileHandle",
     "FileSystemWritableFileStream",
 ], optional = true }
+indexed_db_futures = { version = "0.6.4", features = ["cursors", "async-upgrade"] }
 tokio = { version = "1.46.0", features = ["rt", "time"], optional = true }
 tokio-util = { version = "0.7.15", features = [
     "codec",
