samod: make threadpool usage compile time optional
Problem: the use of the rayon threadpool option to run document actors
in paralell requires the use of the
`async_channel::Sender::blocking_send` and
`async_channel::Receiver::recv_blocking` methods, which are behind a
conditional compilation flag which is not enabled for `wasm` targets.
This means that `samod` cannot be used on `wasm` targets even if the
threadpool feature is not being used.

Solution: make the threadpool feature compile time optional behind the
`threadpool` feature flag. We also put the `blocking_send` and
`recv_blocking` methods behind the same flag so that if the `threadpool`
feature is not available `samod` can compile on `wasm` just fine. While
we're here add a newtype wrapper for unbounded channels to make it
clearer that we expect these channels to be unbounded.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Build
         run: cargo build --verbose --features tokio
       - name: clippy
-        run: cargo clippy --all-targets --features tokio -- -D warnings
+        run: cargo clippy --all-targets --features samod/tokio,samod/threadpool,samod/axum,samod/tungstenite -- -D warnings
       - name: Run tests
-        run: cargo test --features tokio --verbose
+        run: cargo test --features samod/tokio,samod/threadpool,samod/axum,samod/tungstenite --verbose
+      - name: Run tests without features
+        run: cargo test --verbose --tests
