--- a/samod/Cargo.toml
+++ b/samod/Cargo.toml
@@ -12,6 +12,7 @@ tokio = ["dep:tokio", "dep:tokio-util"]
 axum = ["dep:axum", "dep:tokio", "dep:tokio-util"]
 tungstenite = ["dep:tungstenite", "dep:tokio-tungstenite", "tokio"]
 gio = ["dep:gio", "dep:glib"]
+threadpool = ["dep:rayon"]
 
 [dependencies]
 automerge = "0.6.1"
@@ -20,7 +21,7 @@ bytes = "1.10.1"
 chrono = "0.4.41"
 futures = "0.3.31"
 rand = "0.9.1"
-rayon = "1.10.0"
+rayon = { version = "1.10.0", optional = true }
 samod-core = { path = "../samod-core", version = "0.3.1" }
 tokio = { version = "1.46.0", features = ["rt", "time", "fs"], optional = true }
 tokio-tungstenite = { version = "0.27.0", optional = true }
