--- a/samod/Cargo.toml
+++ b/samod/Cargo.toml
@@ -60,6 +60,8 @@ web-sys = { version = "0.3", features = [
     "FileSystemWritableFileStream",
 ], optional = true }
 indexed_db_futures = { version = "0.6.4", features = ["cursors", "async-upgrade"] }
+console_error_panic_hook = "0.1"
+tracing-wasm = "0.2"
 tokio = { version = "1.46.0", features = ["rt", "time"], optional = true }
 tokio-util = { version = "0.7.15", features = [
     "codec",
