--- a/samod-core/Cargo.toml
+++ b/samod-core/Cargo.toml
@@ -12,7 +12,7 @@ base64 = "0.21"
 tracing = "0.1.41"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 rand = "0.9"
-automerge = "0.7.0"
+automerge = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 hex = "0.4"
 minicbor = { version = "1.0.0", features = ["std"] }
