--- a/samod-py/pyproject.toml
+++ b/samod-py/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "samod"
-version = "0.5.0"
+version = "0.5.0a1"
 description = "Python bindings for samod"
 requires-python = ">=3.8"
 classifiers = [
