--- a/samod-py/Cargo.toml
+++ b/samod-py/Cargo.toml
@@ -19,6 +19,7 @@ pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38", "anyhow"
 pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
 tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros", "time"] }
 tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
+rustls = { version = "0.23", features = ["aws-lc-rs"] }
 futures = "0.3.31"
 anyhow = "1.0"
 tracing = "0.1.41"
