--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,9 @@ jobs:
       - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@nightly
       - uses: dtolnay/install@cargo-docs-rs
-      - run: cargo docs-rs
+      - run: cargo docs-rs -p samod
+      - run: cargo docs-rs -p samod-core
+      - run: cargo docs-rs -p samod-test-harness
   ci:
     runs-on: ubuntu-latest
 
