Add dialers and listeners to samod-core
Problem: samod currently presents a single "connection" abstraction, but
this leaves the problem of handling reconnection up to the users. This
is bad for two reasons: firstly it leaves a lot of work up to callers
which has to be repeated across all the different libraries based on
samod-core and secondly it means that important logic we might want to
do like "don't mark a DocHandle as unavailable whilst trying to
reconnect" is not possible to implement.

Solution: replace the concept of a "connection" with two separate
concepts: dialers and listeners. A dialer is responsible for creating
connections to a given peer, samod will attempt to reconnect using a
dialer if a connection created by that dialer is lost. A listener on
the other hand is responsible for accepting incoming connections, the
main use of this abstraction being to close all connections on a
particular listener when it is removed.

Dialers and listeners are both identified by a URL, this is primarily
for debug purposes as it allows us to easily identify which dialer or
listener is responsible for a given connection.

--- a/samod-test-harness/Cargo.toml
+++ b/samod-test-harness/Cargo.toml
@@ -8,6 +8,7 @@ automerge = { workspace = true }
 rand = "0.9.1"
 samod-core = { path = "../samod-core" }
 tracing = "0.1.41"
+url = "2.5"
 
 [lib]
 
