--- a/samod-core/Cargo.toml
+++ b/samod-core/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1.0", features = ["derive"] }
 hex = "0.4"
 minicbor = { version = "1.0.0", features = ["std"] }
 thiserror = "2.0.12"
+url = "2.5"
 bs58 = { version = "0.5.1", features = ["check"] }
 sha2 = "0.10.9"
 
