--- a/samod/Cargo.toml
+++ b/samod/Cargo.toml
@@ -31,6 +31,7 @@ tokio-util = { version = "0.7.15", features = [
     "net",
 ], optional = true }
 tracing = "0.1.41"
+url = "2.5"
 tungstenite = { version = "0.27.0", optional = true }
 gio = { version = "0.20.12", optional = true }
 glib = { version = "0.20.12", optional = true }
