--- a/samod/Cargo.toml
+++ b/samod/Cargo.toml
@@ -20,6 +20,7 @@ axum = { version = "0.8.4", optional = true, features = ["ws"] }
 bytes = "1.10.1"
 chrono = "0.4.41"
 futures = "0.3.31"
+futures-timer = "3.0.3"
 rand = "0.9.1"
 rayon = { version = "1.10.0", optional = true }
 samod-core = { path = "../samod-core", version = "0.7.0" }
