--- a/samod/Cargo.toml
+++ b/samod/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/alexjg/samod"
 [features]
 tokio = ["dep:tokio", "dep:tokio-util"]
 axum = ["dep:axum", "dep:tokio", "dep:tokio-util"]
-tungstenite = ["dep:tungstenite", "dep:tokio-tungstenite", "tokio"]
+tungstenite = ["dep:tungstenite", "dep:tokio-tungstenite", "tokio", "tungstenite/native-tls", "tokio-tungstenite/native-tls"]
 gio = ["dep:gio", "dep:glib"]
 threadpool = ["dep:rayon"]
 
@@ -36,6 +36,7 @@ tungstenite = { version = "0.27.0", optional = true }
 gio = { version = "0.20.12", optional = true }
 glib = { version = "0.20.12", optional = true }
 async-channel = "2.5.0"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [dev-dependencies]
 eyre = "0.6.12"
