--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 edition = "2024"
 resolver = "3"
-members = [ "samod","samod-core", "samod-test-harness"]
+members = [ "samod", "samod-cli","samod-core", "samod-test-harness"]
 
 [workspace.dependencies]
 automerge = "0.7.1"
+rand = "0.9.2"
