--- a/samod-core/Cargo.toml
+++ b/samod-core/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT"
 base64 = "0.21"
 tracing = "0.1.41"
 uuid = { version = "1.0", features = ["v4", "serde"] }
-rand = "0.9"
+rand = { workspace = true }
 automerge = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 hex = "0.4"
